# test-mcp-client

./: .gitignore  Taskfile.yml  pyproject.toml
mcp_client/: __init__.py  multi_client.py  single_client.py
tests/: example_mcp_server.py  temp.py  test_multi_mcp_client.py
